Bug 115246 - [Windows] The function seekFile() is not implemented.
Summary: [Windows] The function seekFile() is not implemented.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 116205
  Show dependency treegraph
 
Reported: 2013-04-26 05:05 PDT by peavo
Modified: 2013-05-15 23:32 PDT (History)
1 user (show)

See Also:


Attachments
Patch (1.58 KB, patch)
2013-04-26 05:39 PDT, peavo
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description peavo 2013-04-26 05:05:36 PDT
The function seekFile() in WebCore/platform/FileSystem.h is not implemented on Windows.
Comment 1 peavo 2013-04-26 05:39:55 PDT
Created attachment 199817 [details]
Patch
Comment 2 Brent Fulgham 2013-05-08 23:09:15 PDT
Comment on attachment 199817 [details]
Patch

Are there any tests for this function?

r=me.
Comment 3 WebKit Commit Bot 2013-05-08 23:37:37 PDT
Comment on attachment 199817 [details]
Patch

Clearing flags on attachment: 199817

Committed r149793: <http://trac.webkit.org/changeset/149793>
Comment 4 WebKit Commit Bot 2013-05-08 23:37:38 PDT
All reviewed patches have been landed.  Closing bug.
Comment 5 peavo 2013-05-10 05:38:34 PDT
(In reply to comment #2)
> (From update of attachment 199817 [details])
> Are there any tests for this function?
> 
> r=me.

Thanks for reviewing ;)
I was not able to find any test covering this function.