[Windows] The function seekFile() is not implemented. https://bugs.webkit.org/show_bug.cgi?id=115246

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-05-08
Reviewed by Brent Fulgham.

Implemented seekFile() function for Windows.

* platform/win/FileSystemWin.cpp:
(WebCore::seekFile):

Canonical link: https://commits.webkit.org/134253@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149793 268f45cc-cd09-0410-ab3c-d52691b4dbfc